# cuSEAL

./: .gitignore  .gitmodules  CMakeLists.txt  calculate.cpp  calculate.cu  calculate.h  calculateIP.cpp  decrypt.cpp  decrypt.h  encrypt.cpp  encrypt.cu  encrypt.h  keygen.cpp  keygen.h  main.cpp  utils.h
SIGMA/: CHANGES.md  CMakeLists.txt  CONTRIBUTING.md  ISSUES.md  README.md  SECURITY.md
SIGMA/android/: settings.gradle
SIGMA/android/app/: build.gradle
SIGMA/android/app/src/main/: AndroidManifest.xml
SIGMA/android/app/src/main/res/values/: strings.xml
SIGMA/cmake/: CheckCXXIntrinsicsHeader.cmake  CheckCXXIntrinsicsSpecific.cmake  CheckMemset.cmake  CleanArtifacts.cmake  EnableCXX17.cmake  EnableCXXCompilerFlags.cmake  SIGMAMacros.cmake  functions.iOS.cmake
SIGMA/dotnet/: SIGMANet.sln.in
SIGMA/dotnet/examples/: 1_BFV_Basics.cs  2_Encoders.cs  3_Levels.cs  4_BGV_Basics.cs  5_CKKS_Basics.cs  6_Rotation.cs  7_Serialization.cs  8_Performance.cs  Examples.cs  SIGMANetExamples.csproj.in  Utilities.cs
SIGMA/dotnet/nuget/: NUGET.md  SIGMANet-multi.nuspec.in  SIGMANet.nuspec.in  SIGMANet.targets
SIGMA/dotnet/src/: BatchEncoder.cs  CKKSEncoder.cs  Ciphertext.cs  Decryptor.cs  EncryptionParameterQualifiers.cs  EncryptionParameters.cs  Encryptor.cs  Evaluator.cs  GaloisKeys.cs  KSwitchKeys.cs  KeyGenerator.cs  MMProf.cs  MemoryManager.cs  MemoryPoolHandle.cs  Modulus.cs  NativeMethods.cs  ParmsId.cs  Plaintext.cs  PublicKey.cs  RelinKeys.cs  SIGMAContext.cs  SIGMANet.csproj.in  SecretKey.cs  Serializable.cs  Serialization.cs  ValCheck.cs  Version.cs
SIGMA/dotnet/src/tools/: DisposableObject.cs  NativeObject.cs  Utilities.cs
SIGMA/dotnet/tests/: BatchEncoderTests.cs  CKKSEncoderTests.cs  CiphertextTests.cs  DecryptorTests.cs  EncryptionParameterQualifiersTests.cs  EncryptionParametersTests.cs  EncryptorTests.cs  EvaluatorTests.cs  GaloisKeysTests.cs  GlobalContext.cs  KeyGeneratorTests.cs  MemoryManagerTests.cs  MemoryPoolHandleTests.cs  ModulusTests.cs  NativeObjectTests.cs  ParmsIdTests.cs  PlaintextTests.cs  PublicKeyTests.cs  RelinKeysTests.cs  SIGMAContextTests.cs  SIGMANetTest.csproj.in  SecretKeyTests.cs  SerializationTests.cs  TestAssemblyCleanup.cs  Utilities.cs
SIGMA/native/bench/: CMakeLists.txt  bench.cpp  bench.h  bfv.cpp  bgv.cpp  ckks.cpp  keygen.cpp  ntt.cpp
SIGMA/native/examples/: 1_bfv_basics.cpp  2_encoders.cpp  3_levels.cpp  4_bgv_basics.cpp  5_ckks_basics.cpp  6_rotation.cpp  7_serialization.cpp  8_performance.cpp  CMakeLists.txt  examples.cpp  examples.h
SIGMA/native/src/sigma/: CMakeLists.txt  batchencoder.cpp  batchencoder.h  ciphertext.cpp  ciphertext.h  ckks.cu  ckks.cuh  ckks.h  context.cpp  context.h  decryptor.cpp  decryptor.h  dynarray.h  encryptionparams.cpp  encryptionparams.h  encryptor.cpp  encryptor.cu  encryptor.h  evaluator.cpp  evaluator.h  galoiskeys.h  kernelprovider.cu  kernelprovider.h  kernelutils.cu  kernelutils.cuh  keygenerator.cpp  keygenerator.h  kswitchkeys.cpp  kswitchkeys.h  memorymanager.cpp  memorymanager.h  modulus.cpp  modulus.h  plaintext.cpp  plaintext.cuh  plaintext.h  publickey.h  randomgen.cpp  randomgen.h  randomtostd.h  (+9 more)
SIGMA/native/src/sigma/c/: CMakeLists.txt  batchencoder.cpp  batchencoder.h  ciphertext.cpp  ciphertext.h  ckksencoder.cpp  ckksencoder.h  contextdata.cpp  contextdata.h  decryptor.cpp  decryptor.h  defines.h  encryptionparameterqualifiers.cpp  encryptionparameterqualifiers.h  encryptionparameters.cpp  encryptionparameters.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h  galoiskeys.cpp  galoiskeys.h  keygenerator.cpp  keygenerator.h  kswitchkeys.cpp  kswitchkeys.h  memorymanager.cpp  memorymanager.h  memorypoolhandle.cpp  memorypoolhandle.h  modulus.cpp  modulus.h  plaintext.cpp  plaintext.h  publickey.cpp  publickey.h  relinkeys.cpp  relinkeys.h  secretkey.cpp  secretkey.h  (+12 more)
SIGMA/native/src/sigma/util/: CMakeLists.txt  clang.h  clipnormal.cpp  clipnormal.h  common.cpp  common.h  croots.cpp  croots.h  defines.h  devicearray.cuh  dwthandler.h  fips202.c  galois.cpp  galois.h  gcc.h  globals.cpp  globals.h  hash.cpp  hash.h  hestdparms.h  hostarray.h  iterator.cpp  iterator.h  locks.h  memorypool_cuda.cu  memorypool_cuda.h  mempool.cpp  mempool.h  msvc.h  ntt.cpp  ntt.h  ntt_cuda.cuh  numth.cpp  numth.h  pointer.h  polyarithsmallmod.cpp  polyarithsmallmod.h  polycore.h  randomgenerator.cu  randomgenerator.cuh  (+19 more)
SIGMA/native/tests/: CMakeLists.txt
SIGMA/native/tests/sigma/: CMakeLists.txt  batchencoder.cpp  ciphertext.cpp  ckks.cpp  context.cpp  dynarray.cpp  encryptionparams.cpp  encryptor.cpp  evaluator.cpp  galoiskeys.cpp  keygenerator.cpp  memorymanager.cpp  modulus.cpp  plaintext.cpp  publickey.cpp  randomgen.cpp  randomtostd.cpp  relinkeys.cpp  secretkey.cpp  serialization.cpp
SIGMA/native/tests/sigma/util/: CMakeLists.txt  clipnormal.cpp  common.cpp  galois.cpp  hash.cpp  iterator.cpp  locks.cpp  mempool.cpp  ntt.cpp  numth.cpp  polyarithsmallmod.cpp  polycore.cpp  rns.cpp  stringtouint64.cpp  uint64tostring.cpp  uintarith.cpp  uintarithmod.cpp  uintarithsmallmod.cpp  uintcore.cpp
SIGMA/pipelines/: android.yml  ios.yml  nix.yml  nuget.yml  windows.yml
SIGMA/src/: CMakeLists.txt  batchencoder.cpp  ciphertext.cpp  ciphertext.h  ckks.cu  ckks.cuh  context.cpp  context.h  decryptor.h  encryptor.cu  encryptor.h  evaluator.cpp  evaluator.h  kernelprovider.cuh  keygenerator.cpp  plaintext.cuh  sigma.h
SIGMA/src/util/: CMakeLists.txt  dwthandler.h  galois.cpp  galois.h  hostarray.h  ntt.cpp  ntt.h  polyarithsmallmod.cpp  rlwe.cpp  rns.cpp  rns.h  uintarithsmallmod.h
SIGMA/tools/scripts/: clang-format-all.sh  collect_system_info.sh
data/: config.json
example/: calculate.cu  decrypt.cpp  encrypt.cu  keygen.cpp  plaintext_calculate.cpp  verify.cpp
util/: CMakeLists.txt  clustering.cpp  clustering.h  configmanager.cpp  configmanager.h  keyutil.h  safequeue.h  vectorutil.cpp  vectorutil.cu  vectorutil.h
